<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <RelativeLayout
        android:id="@+id/rl_headers"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/create_meeting"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/close" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_headers"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_meeting_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/textview_background"
            android:hint="@string/meeting_title"
            android:imeOptions="actionDone"
            android:singleLine="true" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="2">

            <EditText
                android:id="@+id/et_date_picker"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/textview_background"
                android:drawableEnd="@drawable/calendar"
                android:drawableRight="@drawable/calendar"
                android:focusable="false"
                android:hint="@string/meeting_date"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_time_picker"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/textview_background"
                android:drawableEnd="@drawable/clock"
                android:drawableRight="@drawable/clock"
                android:focusable="false"
                android:hint="@string/meeting_time"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_create_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_background"
            android:text="@string/save"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


</RelativeLayout>