<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CreateCallActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/ll_full_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bar"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/textview_background"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_call_type"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <EditText
                android:id="@+id/et_date_picker"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/textview_background"
                android:drawableEnd="@drawable/calendar"
                android:drawableRight="@drawable/calendar"
                android:focusable="false"
                android:hint="@string/call_start_date"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_time_picker"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/textview_background"
                android:drawableEnd="@drawable/clock"
                android:drawableRight="@drawable/clock"
                android:focusable="false"
                android:hint="@string/call_start_time"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="2">

            <EditText
                android:id="@+id/et_minutes"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/textview_background"
                android:hint="@string/minutes"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="3"
                android:nextFocusRight="@id/et_minutes"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_seconds"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/textview_background"
                android:hint="@string/seconds"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_call_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/textview_background"
            android:gravity="top|left"
            android:hint="@string/call_description"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="5"
            android:scrollbars="vertical"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_dispo_status"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp" />
    </LinearLayout>


    <Button
        android:id="@+id/bt_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_background"
        android:text="@string/save"
        android:textColor="@color/colorWhite" />

    <ProgressBar
        android:id="@+id/pb_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>