<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rl_data"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/ll_data_phone"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/tv_data_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textSize="18sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ll_data_queue"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/ll_data_entry"
                android:layout_toRightOf="@id/ll_data_phone"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/tv_data_queue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/queue"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ll_data_entry"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/ll_data_duration"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/tv_data_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/entry"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ll_data_duration"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/tv_data_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/duration"
                    android:textSize="18sp" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>