<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rl_headers"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_headers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/conference"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />


        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/close" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_agent_list"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/rl_headers">

        <Spinner
            android:id="@+id/sp_agents"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:layout_weight="2"
            android:visibility="visible" />

        <Button
            android:id="@+id/bt_conference_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/connect"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_conference_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/ll_agent_list">

        <TextView
            android:id="@+id/tv_manage_conference"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorPrimaryDark"
            android:padding="15dp"
            android:text="@string/manage_conference"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_conference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:visibility="visible" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>